--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "@nuxtjs/pwa": "^3.3.5",
+    "amazon-ivs-player": "^1.2.0",
+    "copy-webpack-plugin": "6",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "video.js": "^7.11.8"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
