--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "yarn lint:js"
+    "lint": "npm run lint:js"
   },
   "dependencies": {
     "@nuxtjs/pwa": "^3.3.5",
-    "amazon-ivs-player": "^1.2.0",
-    "copy-webpack-plugin": "6",
+    "amazon-ivs-player": "^1.3.1",
+    "copy-webpack-plugin": "^6.4.1",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
-    "video.js": "^7.11.8"
+    "video.js": "^7.12.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
